# PiMatrix

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  PiMatrix  cmake_install.cmake
include/: global_includes.h  platform_cshal.h  project_conf.h  threads_list.h
src/: main.cpp  matrix_thread.cpp
